# lavax-pp

./: .gitignore  Makefile.am  README.md  configure.ac
demo/W/: INCAR  POSCAR_init  lavax.conf  predictor.in
demo/W_Re/: lavax.conf
doc/: Makefile.am  lavax-manual.tex
doc/img/: compr-pot3.eps  pot-comp-compr2.eps  pot-comp-quasi2.eps  pred.eps  pseudo-pot-far.eps  pseudo-pot-near.eps  quasi-stat-pot2.eps
examples/W/: POSCAR_init  lavax.conf
examples/W_Re/: POSCAR_init  lavax.conf  predictor.in
src/: Makefile.am  init_check.cpp  init_check.hpp  lavax.conf  lavax.cpp  lavax.hpp  main_PKAvel.cpp  main_lavax.cpp  parse_config_file.hpp  scrap.cpp  scrap.hpp  small_scale_units.hpp  test1.cpp  test2.cpp  unit_test.cpp
